--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>primeiro site de repositório</title>
+    <title>primeiro site de repositório github</title>
 </head>
 <body>
-    <h1>Olá, me cha Daniel e estou buscan do uma vaga de DEV</h1>
-    <h1>Boa noite</h1>
+    <h1>Olá, me chamo Daniel e estou buscando uma vaga de DEV.Backend</h1>
+       
+       <h1>Obrigado</h1>
 </body>
 </html>
