--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -7,7 +7,7 @@
     <title>primeiro site de repositório github</title>
 </head>
 <body>
-    <h1>Olá, me chamo Daniel e estou buscando uma vaga de DEV.Backend</h1>
+    <h1>Olá, me chamo Daniel e estou buscando uma vaga de DEV.Frontend</h1>
        
        <h1>Obrigado</h1>
 </body>
